commit product and cart functions
