# src/Domain/Model/Request/AddCartItemRequest.cs
@@ -1,0 +1,11 @@
+﻿namespace Domain.Model.Request
+{
+	public class AddCartItemRequest
+	{
+		public string UserName { get; set; }
+
+		public long ProductId { get; set; }
+
+		public int Quantity { get; set; }
+	}
+}
