# src/Domain/Repository/IProductRepository.cs
@@ -1,0 +1,11 @@
+﻿using System.Collections.Generic;
+using Domain.Model;
+
+namespace Domain.Repository
+{
+	public interface IProductRepository : IRepository
+	{
+		List<Product> GetProducts();
+		Product GetProductById(long id);
+	}
+}
